--- a/PuroFusionTestGui/PuroFusionMainGui.xaml
+++ b/PuroFusionTestGui/PuroFusionMainGui.xaml
@@ -876,10 +876,10 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <telerik:RadTreeView Grid.Row="0" IsDragDropEnabled="True">
-                            <telerik:RadTreeViewItem Header="Sport Categories" IsExpanded="True">
+                        <telerik:RadTreeView Grid.Row="0" IsDragDropEnabled="True" ImagesBaseDir="F:\src\Customer\Purolator\PuroFusion\PuroFusionTestHarness\PuroFusionTestGui\" >
+                            <telerik:RadTreeViewItem Header="Sport Categories" IsExpanded="True" DefaultImageSrc="TechSupport.ico">
                                 <telerik:RadTreeViewItem Header="Football" IsExpanded="True">
                                     <telerik:RadTreeViewItem Header="Futsal"/>
                                     <telerik:RadTreeViewItem Header="Soccer"/>
@@ -888,17 +888,23 @@
                                 <telerik:RadTreeViewItem Header="Cycling"/>
                             </telerik:RadTreeViewItem>
                         </telerik:RadTreeView>
-                        <!--<telerik:RadTreeView x:Name="radTreeView" Grid.Row="1" IsOptionElementsEnabled="True" Margin="8" SelectionChanged="radTreeView_SelectionChanged" Checked="radTreeView_Checked" Unchecked="radTreeView_Unchecked">
+                        <StackPanel Grid.Row="1" Orientation="Horizontal">
+                            <Button Name="btnWebTesterRunTreeSim" Height="30" Margin="10,0,0,0" Padding="10,0,10,0" Style="{StaticResource RoundedButton}" IsEnabled="True" Click="btnWebTesterRunTreeSim_Click" >Run</Button>
+
+                        </StackPanel>
+                            <!--
+                        ImagesBaseDir="F:\src\Customer\Purolator\PuroFusion\PuroFusionTestHarness\PuroFusionTestGui\"
+                        <telerik:RadTreeView x:Name="radTreeView" Grid.Row="1" IsOptionElementsEnabled="True" Margin="8" SelectionChanged="radTreeView_SelectionChanged" Checked="radTreeView_Checked" Unchecked="radTreeView_Unchecked">
                             <telerik:RadTreeView.Background>
                                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightLightColorKey}}"/>
                             </telerik:RadTreeView.Background>
                         </telerik:RadTreeView>-->
-                        <telerik:RadTreeView x:Name="radTreeView2" Grid.Row="1" IsOptionElementsEnabled="True" Margin="8">
+                        <!--<telerik:RadTreeView x:Name="radTreeView2" Grid.Row="1" IsOptionElementsEnabled="True" Margin="8">
                             <telerik:RadTreeView.Background>
                                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightLightColorKey}}"/>
                             </telerik:RadTreeView.Background>
-                        </telerik:RadTreeView>
-                        <telerik:RadTreeView x:Name="radTreeView3" Grid.Row="2" IsOptionElementsEnabled="True" Margin="8">
+                        </telerik:RadTreeView>-->
+                        <telerik:RadTreeView x:Name="radTreeView3" Grid.Row="2" IsOptionElementsEnabled="True" Margin="8" Checked="radTreeView_Checked" Unchecked="radTreeView_Unchecked">
                             <telerik:RadTreeView.Background>
                                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightLightColorKey}}"/>
                             </telerik:RadTreeView.Background>
