--- a/PuroFusionUnitTesterGui/PuroFusUnitTestMainGui.xaml
+++ b/PuroFusionUnitTesterGui/PuroFusUnitTestMainGui.xaml
@@ -915,6 +915,11 @@
                                 <ComboBoxItem>ON</ComboBoxItem>
                                 <ComboBoxItem>OFF</ComboBoxItem>
                             </ComboBox>
+                            <Label Content="Step status:"  />
+                            <ComboBox Height="23" Name="cmbBoxWebTesterStepStatus" Width="Auto" SelectedIndex="0" >
+                                <ComboBoxItem>Pass</ComboBoxItem>
+                                <ComboBoxItem>Failed</ComboBoxItem>
+                            </ComboBox>
                         </StackPanel>
                         <telerik:RadTreeView x:Name="radTreeView3" Grid.Row="2" IsOptionElementsEnabled="True" Margin="8" Checked="radTreeView_Checked" Unchecked="radTreeView_Unchecked">
                             <telerik:RadTreeView.Background>
@@ -930,6 +935,7 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <ListBox Grid.Row="0" HorizontalAlignment="Center" Margin="0,10,0,0" Name="listBox1" Height="300" Width="510"></ListBox>
                             <StackPanel Grid.Row="1" Orientation="Horizontal">
@@ -937,6 +943,33 @@
                                 <Button Name="btnWebTesterRunScript" Height="30" Margin="10,0,0,0" Padding="10,0,10,0" Style="{StaticResource RoundedButton}" IsEnabled="True" Click="btnWebTesterRunScript_Click" >Run Script</Button>
                             </StackPanel>
                             <telerik:RadGridView x:Name="radGridWebTester" ToolTip="" Grid.Row="2" RowHeight="20"  ShowGroupPanel="True" >
+                            </telerik:RadGridView>
+                            <telerik:RadGridView x:Name="radGridWebTester2"  Grid.Row="3" RowHeight="20" ShowGroupPanel="False" ItemsSource="{Binding Tests}" AutoGenerateColumns="False" >
+                                <telerik:RadGridView.Columns>
+                                    <telerik:GridViewDataColumn Header="Name" DataMemberBinding="{Binding Name}" ></telerik:GridViewDataColumn>
+                                    <telerik:GridViewDataColumn Header="Enabled" DataMemberBinding="{Binding Enabled}" ></telerik:GridViewDataColumn>
+                                    <telerik:GridViewDataColumn Header="iTotalSteps"  DataMemberBinding="{Binding iTotalSteps}" ></telerik:GridViewDataColumn>
+                                    <telerik:GridViewDataColumn Header="Category" DataMemberBinding="{Binding strCategoryName}" IsReadOnly="False" ></telerik:GridViewDataColumn>
+                                    <telerik:GridViewDataColumn Header="Step" DataMemberBinding="{Binding Step}" IsReadOnly="False" ></telerik:GridViewDataColumn>
+                                </telerik:RadGridView.Columns>
+                                <telerik:RadGridView.ChildTableDefinitions>
+                                    <telerik:GridViewTableDefinition>
+                                        <telerik:GridViewTableDefinition.Relation>
+                                            <telerik:PropertyRelation ParentPropertyName="ListSteps" />
+                                        </telerik:GridViewTableDefinition.Relation>
+                                    </telerik:GridViewTableDefinition>
+                                </telerik:RadGridView.ChildTableDefinitions>
+                                <telerik:RadGridView.HierarchyChildTemplate>
+                                    <DataTemplate>
+                                        <telerik:RadGridView ItemsSource="{Binding ListSteps}" Grid.Row="1" RowHeight="20" AutoGenerateColumns="False" ShowGroupPanel="False" GroupRenderMode="Flat" >
+                                            <telerik:RadGridView.Columns>
+                                                <telerik:GridViewDataColumn DataMemberBinding="{Binding Name}" />
+                                                <telerik:GridViewDataColumn DataMemberBinding="{Binding Status}" />
+                                            </telerik:RadGridView.Columns>
+                                        </telerik:RadGridView>
+                                    </DataTemplate>
+                                </telerik:RadGridView.HierarchyChildTemplate>
+
                             </telerik:RadGridView>
                         </Grid>
                     </Grid>
